--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "indexof": "0.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "indexof": "0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -25,6 +22,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "rollup-plugin-external-globals": "^0.8.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
